--- a/src/config.yml
+++ b/src/config.yml
@@ -51,6 +51,9 @@ Wool_Tunic_Name: Wool Tunic
 Wool_Pants_Name: Wool Pants
 Wool_Boots_Name: Wool Boots
 
+#Renamed Milk
+Pumpkin_Milk_Name: Pumpkin Seed Milk
+
 # -----------------------------------------------------------------------------------------------------
 
 # Show_Logo shows the logo in console on plugin loading.
